[package]
name = "rpc-router"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
axum = "0.8.8"                          
reqwest = { version = "0.13.2", features = ["json"] }  
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
anyhow = "1.0.101"
clap = { version = "4.5.59", features = ["derive"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
tokio-stream = "0.1.18"
dashmap = "6.1.0"
toml = "0.8"
futures = "0.3"