[package]
name = "solana-rpc-router"
version = "0.1.0"
edition = "2024"
description = "A smart Solana RPC load balancer with broadcast, health checking and dynamic score-based routing"
license = "MIT"
repository = "https://github.com/yourusername/rpc-router"
keywords = ["solana", "rpc", "load-balancer", "web3", "blockchain"]
categories = ["network-programming"]

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dashmap = "6"
toml = "0.8"
futures = "0.3"